kubernetes/deployment.yaml
apiVersion: v1
kind: Pod
metadata:
  name: inat-pod
  labels:
    k8s-app: inat-app
spec:
  containers:
  - name: shiny
    image: ghcr.io/boettiger-lab/nautilus-shiny
    imagePullPolicy: Always
    resources:
      requests:
        cpu: 4
        memory: 4Gi
      limits:
        cpu: 4
        memory: 4Gi
