kubernetes/ingress.yaml
## Ensure A record exists first!
## (Or implement DNS record manager)


apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shiny-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
  labels:
    app: shiny-deployment
spec:
  ingressClassName: traefik
  rules:
  - host: data.thelio.carlboettiger.info
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: shiny-svc
            port:
              number: 8080
  tls:
  - hosts:
    - data.thelio.carlboettiger.info
    secretName: shiny-tls
